# Trackify

./: .env.example  README.md  app.py  generate_trackify_gif.py  main.py  pyproject.toml  spotify_utils.py
.streamlit/: config.toml
pages/: Bot.py  Home.py  Landing.py  Moodify.py
