[project]
name = "tracktion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "spotipy>=2.25.1",
    "streamlit>=1.44.1",
]
